chore: add new partners

--- a/index.html
+++ b/index.html
@@ -499,6 +499,18 @@
                     </div>
                     <h3 class="partners-tier">FACERJ</h3>
                 </a>
+                <a href="https://www.instagram.com/grupoaguasdobrasil/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo partners-logo-filter">
+                        <img src="assets/partners/AguasDeNovaFriburgoLogo.png" alt="Águas de Nova Friburgo">
+                    </div>
+                    <h3 class="partners-tier">Águas de Nova Friburgo</h3>
+                </a>
+                <a href="https://www.instagram.com/novafriburgoemfoco/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo partners-logo-filter">
+                        <img src="assets/partners/NovaFriburgoEmFoco.webp" alt="Nova Friburgo Em Foco">
+                    </div>
+                    <h3 class="partners-tier">Nova Friburgo Em Foco</h3>
+                </a>
             </div>
         </div>
     </section>
@@ -599,6 +611,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2026 FEPRO. Todos os direitos reservados à Âmbar Produções LTDA</p>
+                <p>Criado por <a href="https://www.linkedin.com/in/matheustvelloso/" target="_blank" aria-label="LinkedIn" rel="nonoopener noreferrer" class="creator-profile-link"><i>Matheus Velloso</i></a></p>
             </div>
         </div>
     </footer>
