--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                             <h3>Premiação e Encerramento</h3>
                             <p>Auditório Principal</p>
                             <span class="agenda-type">Cerimônia</span>
-                        </div> 
+                        </div>
                     </div> -->
                 </div>
                 <div class="tab-content" id="dia5">
@@ -353,7 +353,7 @@
                             <h3>Premiação e Encerramento</h3>
                             <p>Auditório Principal</p>
                             <span class="agenda-type">Cerimônia</span>
-                        </div> 
+                        </div>
                     </div> -->
                 </div>
             </div>
@@ -416,71 +416,23 @@
                 <p class="section-subtitle">Agradecemos aqueles que fazem o evento acontecer</p>
             </div>
             <div class="partners-grid">
-                <a href="https://www.instagram.com/sebrae/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
-                    <div class="partners-logo">
-                    <img src="assets/partners/SebraeLogo.png" alt="Sebrae">
-                    </div>
-                    <h3 class="partners-tier">Sebrae</h3>
-                </a>
                 <a href="https://www.instagram.com/acianf/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/AcianfLogo.png" alt="ACIANF">
                     </div>
                     <h3 class="partners-tier">ACIANF</h3>
                 </a>
-                <a href="https://www.instagram.com/frionline/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
-                    <div class="partners-logo">
-                        <img src="assets/partners/FriOnlineLogo.png">
+                <a href="https://www.instagram.com/grupoaguasdobrasil/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo partners-logo-filter">
+                        <img src="assets/partners/AguasDeNovaFriburgoLogo.png" alt="Águas de Nova Friburgo">
                     </div>
-                    <h3 class="partners-tier">Fri Online</h3>
-                </a>
-                <a href="https://www.instagram.com/unimedserranarj/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
-                    <div class="partners-logo">
-                        <img src="assets/partners/UnimedLogo.png" alt="Unimed">
-                    </div>
-                    <h3 class="partners-tier">Unimed</h3>
+                    <h3 class="partners-tier">Águas de Nova Friburgo</h3>
                 </a>
                 <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/ConventionLogo.png" alt="Convention">
                     </div>
                     <h3 class="partners-tier">Convention</h3>
-                </a>
-                <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
-                    <div class="partners-logo">
-                        <img src="assets/partners/InterTvLogo.webp" alt="Convention">
-                    </div>
-                    <h3 class="partners-tier">InterTV</h3>
-                </a>
-                <a href="https://www.instagram.com/friburgofm/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
-                    <div class="partners-logo">
-                        <img src="assets/partners/FriburgoFmLogo.webp" alt="Friburgo FM">
-                    </div>
-                    <h3 class="partners-tier">Friburgo FM</h3>
-                </a>
-                <a href="https://www.instagram.com/concessionariarota116/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
-                    <div class="partners-logo">
-                        <img src="assets/partners/Rota116Logo.png" alt="Rota 116">
-                    </div>
-                    <h3 class="partners-tier">Rota 116</h3>
-                </a>
-                <a href="https://www.instagram.com/faol_oficial/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
-                    <div class="partners-logo">
-                        <img src="assets/partners/FaolLogo.svg" alt="FAOL">
-                    </div>
-                    <h3 class="partners-tier">FAOL</h3>
-                </a>
-                <a href="https://www.instagram.com/rg.criativa/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
-                    <div class="partners-logo">
-                        <img src="assets/partners/RgCriativaLogo.svg" alt="RG Criativa">
-                    </div>
-                    <h3 class="partners-tier">RG Criativa</h3>
-                </a>
-                <a href="https://www.instagram.com/prefeituranovafriburgo/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
-                    <div class="partners-logo">
-                        <img src="assets/partners/PrefeituraLogo.jpg" alt="PMNF">
-                    </div>
-                    <h3 class="partners-tier">Prefeitura de Nova Friburgo</h3>
                 </a>
                 <a href="https://www.instagram.com/nfcountryclube/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
@@ -494,17 +446,65 @@
                     </div>
                     <h3 class="partners-tier">FACERJ</h3>
                 </a>
-                <a href="https://www.instagram.com/grupoaguasdobrasil/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
-                    <div class="partners-logo partners-logo-filter">
-                        <img src="assets/partners/AguasDeNovaFriburgoLogo.png" alt="Águas de Nova Friburgo">
+                <a href="https://www.instagram.com/faol_oficial/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo">
+                        <img src="assets/partners/FaolLogo.svg" alt="FAOL">
                     </div>
-                    <h3 class="partners-tier">Águas de Nova Friburgo</h3>
+                    <h3 class="partners-tier">FAOL</h3>
+                </a>
+                <a href="https://www.instagram.com/friburgofm/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo">
+                        <img src="assets/partners/FriburgoFmLogo.webp" alt="Friburgo FM">
+                    </div>
+                    <h3 class="partners-tier">Friburgo FM</h3>
+                </a>
+                <a href="https://www.instagram.com/frionline/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo">
+                        <img src="assets/partners/FriOnlineLogo.png">
+                    </div>
+                    <h3 class="partners-tier">FriOnline</h3>
+                </a>
+                <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo">
+                        <img src="assets/partners/InterTvLogo.webp" alt="Convention">
+                    </div>
+                    <h3 class="partners-tier">InterTV</h3>
                 </a>
                 <a href="https://www.instagram.com/novafriburgoemfoco/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo partners-logo-filter">
                         <img src="assets/partners/NovaFriburgoEmFoco.webp" alt="Nova Friburgo Em Foco">
                     </div>
                     <h3 class="partners-tier">Nova Friburgo Em Foco</h3>
+                </a>
+                <a href="https://www.instagram.com/prefeituranovafriburgo/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo">
+                        <img src="assets/partners/PrefeituraLogo.jpg" alt="PMNF">
+                    </div>
+                    <h3 class="partners-tier">Prefeitura de Nova Friburgo</h3>
+                </a>
+                <a href="https://www.instagram.com/rg.criativa/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo">
+                        <img src="assets/partners/RgCriativaLogo.svg" alt="RG Criativa">
+                    </div>
+                    <h3 class="partners-tier">RG Criativa</h3>
+                </a>
+                <a href="https://www.instagram.com/concessionariarota116/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo">
+                        <img src="assets/partners/Rota116Logo.png" alt="Rota 116">
+                    </div>
+                    <h3 class="partners-tier">Rota 116</h3>
+                </a>
+                <a href="https://www.instagram.com/sebrae/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo">
+                    <img src="assets/partners/SebraeLogo.png" alt="Sebrae">
+                    </div>
+                    <h3 class="partners-tier">Sebrae</h3>
+                </a>
+                <a href="https://www.instagram.com/unimedserranarj/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                    <div class="partners-logo">
+                        <img src="assets/partners/UnimedLogo.png" alt="Unimed">
+                    </div>
+                    <h3 class="partners-tier">Unimed</h3>
                 </a>
             </div>
         </div>
