fix: update navigation link from 'Programação' to 'Agenda' in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul class="nav-menu">
                         <li><a href="#about" class="nav-link active">Sobre o evento</a></li>
                         <li><a href="#schedule" class="nav-link">Horários</a></li>
-                        <li><a href="#programacao" class="nav-link">Programação</a></li>
+                        <li><a href="#agenda" class="nav-link">Programação</a></li>
                         <li><a href="#exhibitors" class="nav-link">Expositores</a></li>
                         <li><a href="#partners" class="nav-link">Patrocinadores</a></li>
                         <li><a href="#map" class="nav-link">Mapa do evento</a></li>
