fix: update statistics and schedule details in index.html, adjust counter animation in script.js

--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
             </div>
             <div class="about-stats">
                 <div class="stat-card">
-                    <div class="stat-number">100+</div>
+                    <div class="stat-number">100</div>
                     <div class="stat-label">Estandes</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">1000+</div>
+                    <div class="stat-number">1000</div>
                     <div class="stat-label">Ofertas</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">40K+</div>
+                    <div class="stat-number">40k</div>
                     <div class="stat-label">Visitantes</div>
                 </div>
             </div>
@@ -93,31 +93,31 @@
             </div>
             <div class="schedule-grid">
                 <div class="schedule-card">
-                    <div class="schedule-day">Dia 1</div>
+                    <div class="schedule-day">Quarta-feira</div>
                     <div class="schedule-date">08 de Abril</div>
                     <div class="schedule-time">13:00 - 22:00</div>
                     <!-- <p class="schedule-desc">Abertura oficial e início das exposições</p> -->
                 </div>
                 <div class="schedule-card">
-                    <div class="schedule-day">Dia 2</div>
+                    <div class="schedule-day">Quinta-feira</div>
                     <div class="schedule-date">09 de Abril</div>
                     <div class="schedule-time">13:00 - 22:00</div>
                     <!-- <p class="schedule-desc">Palestras e workshops em destaque</p> -->
                 </div>
                 <div class="schedule-card">
-                    <div class="schedule-day">Dia 3</div>
+                    <div class="schedule-day">Sexta-feira</div>
                     <div class="schedule-date">10 de Abril</div>
                     <div class="schedule-time">13:00 - 22:00</div>
                     <!-- <p class="schedule-desc">Encerramento com premiações</p> -->
                 </div>
                 <div class="schedule-card">
-                    <div class="schedule-day">Dia 4</div>
+                    <div class="schedule-day">Sábado</div>
                     <div class="schedule-date">11 de Abril</div>
                     <div class="schedule-time">10:00 - 22:00</div>
                     <!-- <p class="schedule-desc">Encerramento com premiações</p> -->
                 </div>
                 <div class="schedule-card">
-                    <div class="schedule-day">Dia 5</div>
+                    <div class="schedule-day">Domingo</div>
                     <div class="schedule-date">12 de Abril</div>
                     <div class="schedule-time">10:00 - 22:00</div>
                     <!-- <p class="schedule-desc">Encerramento com premiações</p> -->
@@ -126,9 +126,13 @@
             <div class="info-box">
                 <h3>Informações Importantes</h3>
                 <ul>
-                    <li>Estacionamento de responsabilidade do NFCC</li>
-                    <li>Gratuidade para idosos e crianças até 12 anos</li>
-                    <li>Menores somente sob o acompanhamento de um responsável</li>
+                    <li>Estacionamento de responsabilidade do NFCC (valores sob consulta)</li>
+                    <li>Meia entrada para estudantes, idosos (60+), 
+                        pessoas com deficiência e acompanhantes, jovens de baixa renda (15-29 anos no CadÚnico) 
+                        mediante comprovação
+                    </li>
+                    <li>Gratuidade para crianças até 12 anos</li>
+                    <li>Menores somente acompanhados do responsável legal</li>
                     <li>Praça de alimentação disponível no evento</li>
                 </ul>
             </div>
@@ -412,7 +416,7 @@
     <section id="partners" class="section partners-section">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Apoiadores</h2>
+                <h2 class="section-title">Parceiros</h2>
                 <p class="section-subtitle">Agradecemos aqueles que fazem o evento acontecer</p>
             </div>
             <div class="partners-grid">
@@ -420,91 +424,91 @@
                     <div class="partners-logo">
                         <img src="assets/partners/AcianfLogo.png" alt="ACIANF">
                     </div>
-                    <h3 class="partners-tier">ACIANF</h3>
+                    <h3 class="partners-tier">Apoio Institucional</h3>
                 </a>
                 <a href="https://www.instagram.com/grupoaguasdobrasil/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo partners-logo-filter">
                         <img src="assets/partners/AguasDeNovaFriburgoLogo.png" alt="Águas de Nova Friburgo">
                     </div>
-                    <h3 class="partners-tier">Águas de Nova Friburgo</h3>
+                    <h3 class="partners-tier">Parceria</h3>
                 </a>
                 <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/ConventionLogo.png" alt="Convention">
                     </div>
-                    <h3 class="partners-tier">Convention</h3>
+                    <h3 class="partners-tier">Apoio Institucional</h3>
                 </a>
                 <a href="https://www.instagram.com/nfcountryclube/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/NfccLogo.png" alt="NFCC">
                     </div>
-                    <h3 class="partners-tier">Country Clube</h3>
+                    <h3 class="partners-tier">Parceria</h3>
                 </a>
                 <a href="https://www.instagram.com/facerj_/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/FacerjLogo.png" alt="FACERJ">
                     </div>
-                    <h3 class="partners-tier">FACERJ</h3>
+                    <h3 class="partners-tier">Apoio Institucional</h3>
                 </a>
                 <a href="https://www.instagram.com/faol_oficial/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/FaolLogo.svg" alt="FAOL">
                     </div>
-                    <h3 class="partners-tier">FAOL</h3>
+                    <h3 class="partners-tier">Parceria</h3>
                 </a>
                 <a href="https://www.instagram.com/friburgofm/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/FriburgoFmLogo.webp" alt="Friburgo FM">
                     </div>
-                    <h3 class="partners-tier">Friburgo FM</h3>
+                    <h3 class="partners-tier">Midia Partner</h3>
                 </a>
                 <a href="https://www.instagram.com/frionline/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/FriOnlineLogo.png">
                     </div>
-                    <h3 class="partners-tier">FriOnline</h3>
+                    <h3 class="partners-tier">Patrocinador</h3>
                 </a>
                 <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/InterTvLogo.webp" alt="Convention">
                     </div>
-                    <h3 class="partners-tier">InterTV</h3>
+                    <h3 class="partners-tier">Midia Partner</h3>
                 </a>
                 <a href="https://www.instagram.com/novafriburgoemfoco/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo partners-logo-filter">
                         <img src="assets/partners/NovaFriburgoEmFoco.webp" alt="Nova Friburgo Em Foco">
                     </div>
-                    <h3 class="partners-tier">Nova Friburgo Em Foco</h3>
+                    <h3 class="partners-tier">Midia Partner</h3>
                 </a>
                 <a href="https://www.instagram.com/prefeituranovafriburgo/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/PrefeituraLogo.jpg" alt="PMNF">
                     </div>
-                    <h3 class="partners-tier">Prefeitura de Nova Friburgo</h3>
+                    <h3 class="partners-tier">Parceria</h3>
                 </a>
                 <a href="https://www.instagram.com/rg.criativa/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/RgCriativaLogo.svg" alt="RG Criativa">
                     </div>
-                    <h3 class="partners-tier">RG Criativa</h3>
+                    <h3 class="partners-tier">Parceria</h3>
                 </a>
                 <a href="https://www.instagram.com/concessionariarota116/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/Rota116Logo.png" alt="Rota 116">
                     </div>
-                    <h3 class="partners-tier">Rota 116</h3>
+                    <h3 class="partners-tier">Parceria</h3>
                 </a>
                 <a href="https://www.instagram.com/sebrae/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                     <img src="assets/partners/SebraeLogo.png" alt="Sebrae">
                     </div>
-                    <h3 class="partners-tier">Sebrae</h3>
+                    <h3 class="partners-tier">Patrocinador</h3>
                 </a>
                 <a href="https://www.instagram.com/unimedserranarj/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/UnimedLogo.png" alt="Unimed">
                     </div>
-                    <h3 class="partners-tier">Unimed</h3>
+                    <h3 class="partners-tier">Patrocinador</h3>
                 </a>
             </div>
         </div>
