feat: add countdown section with functionality and styles for upcoming event

--- a/index.html
+++ b/index.html
@@ -49,6 +49,35 @@
     <section id="home" class="section hero-section">
     </section>
 
+    <!-- Countdown Section -->
+    <section class="countdown-section">
+        <div class="countdown-container">
+            <h2 class="countdown-title">Faltam apenas</h2>
+            <div class="countdown-grid">
+                <div class="countdown-unit">
+                    <span class="countdown-number" id="days">00</span>
+                    <span class="countdown-label">Dias</span>
+                </div>
+                <div class="countdown-unit">
+                    <span class="countdown-number" id="hours">00</span>
+                    <span class="countdown-label">Horas</span>
+                </div>
+                <div class="countdown-unit">
+                    <span class="countdown-number" id="minutes">00</span>
+                    <span class="countdown-label">Minutos</span>
+                </div>
+                <div class="countdown-unit">
+                    <span class="countdown-number" id="seconds">00</span>
+                    <span class="countdown-label">Segundos</span>
+                </div>
+            </div>
+            <p class="countdown-date" id="eventDate">08 de Abril de 2026 às 13:00</p>
+            <div class="countdown-message" id="message">
+                🎉 O evento começou! 🎉
+            </div>
+        </div>
+    </section>
+
     <section id="about" class="section about-section">
         <div class="container">
             <div class="about-content">
@@ -167,38 +196,6 @@
                             <span class="lock-text">Programação em breve</span>
                         </div>
                     </div>
-                    <!-- <div class="agenda-item">
-                        <div class="agenda-time">09:00 - 10:00</div>
-                        <div class="agenda-details">
-                            <h3>Cerimônia de Abertura</h3>
-                            <p>Auditório Principal</p>
-                            <span class="agenda-type">Abertura</span>
-                        </div>
-                    </div>
-                    <div class="agenda-item">
-                        <div class="agenda-time">10:30 - 12:00</div>
-                        <div class="agenda-details">
-                            <h3>Palestra: Inovação e Tecnologia</h3>
-                            <p>Auditório A - Palestrante: Dr. João Silva</p>
-                            <span class="agenda-type">Palestra</span>
-                        </div>
-                    </div>
-                    <div class="agenda-item">
-                        <div class="agenda-time">14:00 - 15:30</div>
-                        <div class="agenda-details">
-                            <h3>Workshop: Marketing Digital</h3>
-                            <p>Sala B - Facilitador: Maria Santos</p>
-                            <span class="agenda-type">Workshop</span>
-                        </div>
-                    </div>
-                    <div class="agenda-item">
-                        <div class="agenda-time">16:00 - 17:30</div>
-                        <div class="agenda-details">
-                            <h3>Painel: Sustentabilidade Empresarial</h3>
-                            <p>Auditório Principal</p>
-                            <span class="agenda-type">Painel</span>
-                        </div>
-                    </div> -->
                 </div>
                 <div class="tab-content" id="dia2">
                     <div class="agenda-item agenda-locked">
@@ -213,38 +210,6 @@
                             <span class="lock-text">Programação em breve</span>
                         </div>
                     </div>
-                    <!-- <div class="agenda-item">
-                        <div class="agenda-time">09:00 - 10:30</div>
-                        <div class="agenda-details">
-                            <h3>Palestra: Liderança e Gestão</h3>
-                            <p>Auditório A - Palestrante: Carlos Mendes</p>
-                            <span class="agenda-type">Palestra</span>
-                        </div>
-                    </div>
-                    <div class="agenda-item">
-                        <div class="agenda-time">11:00 - 12:30</div>
-                        <div class="agenda-details">
-                            <h3>Workshop: Empreendedorismo</h3>
-                            <p>Sala B - Facilitador: Ana Costa</p>
-                            <span class="agenda-type">Workshop</span>
-                        </div>
-                    </div>
-                    <div class="agenda-item">
-                        <div class="agenda-time">14:00 - 15:30</div>
-                        <div class="agenda-details">
-                            <h3>Palestra: Inteligência Artificial</h3>
-                            <p>Auditório Principal - Palestrante: Prof. Roberto Lima</p>
-                            <span class="agenda-type">Palestra</span>
-                        </div>
-                    </div>
-                    <div class="agenda-item">
-                        <div class="agenda-time">16:00 - 17:30</div>
-                        <div class="agenda-details">
-                            <h3>Networking Session</h3>
-                            <p>Área de Networking</p>
-                            <span class="agenda-type">Networking</span>
-                        </div>
-                    </div> -->
                 </div>
                 <div class="tab-content" id="dia3">
                     <div class="agenda-item agenda-locked">
@@ -259,30 +224,6 @@
                             <span class="lock-text">Programação em breve</span>
                         </div>
                     </div>
-                    <!-- <div class="agenda-item">
-                        <div class="agenda-time">09:00 - 10:30</div>
-                        <div class="agenda-details">
-                            <h3>Palestra: Futuro do Trabalho</h3>
-                            <p>Auditório Principal - Palestrante: Dra. Paula Oliveira</p>
-                            <span class="agenda-type">Palestra</span>
-                        </div>
-                    </div>
-                    <div class="agenda-item">
-                        <div class="agenda-time">11:00 - 12:30</div>
-                        <div class="agenda-details">
-                            <h3>Workshop: Design Thinking</h3>
-                            <p>Sala B - Facilitador: Lucas Ferreira</p>
-                            <span class="agenda-type">Workshop</span>
-                        </div>
-                    </div>
-                    <div class="agenda-item">
-                        <div class="agenda-time">14:00 - 15:00</div>
-                        <div class="agenda-details">
-                            <h3>Premiação e Encerramento</h3>
-                            <p>Auditório Principal</p>
-                            <span class="agenda-type">Cerimônia</span>
-                        </div>
-                    </div> -->
                 </div>
                 <div class="tab-content" id="dia4">
                     <div class="agenda-item agenda-locked">
@@ -297,30 +238,6 @@
                             <span class="lock-text">Programação em breve</span>
                         </div>
                     </div>
-                    <!-- <div class="agenda-item">
-                        <div class="agenda-time">09:00 - 10:30</div>
-                        <div class="agenda-details">
-                            <h3>Palestra: Futuro do Trabalho</h3>
-                            <p>Auditório Principal - Palestrante: Dra. Paula Oliveira</p>
-                            <span class="agenda-type">Palestra</span>
-                        </div>
-                    </div>
-                    <div class="agenda-item">
-                        <div class="agenda-time">11:00 - 12:30</div>
-                        <div class="agenda-details">
-                            <h3>Workshop: Design Thinking</h3>
-                            <p>Sala B - Facilitador: Lucas Ferreira</p>
-                            <span class="agenda-type">Workshop</span>
-                        </div>
-                    </div>
-                    <div class="agenda-item">
-                        <div class="agenda-time">14:00 - 15:00</div>
-                        <div class="agenda-details">
-                            <h3>Premiação e Encerramento</h3>
-                            <p>Auditório Principal</p>
-                            <span class="agenda-type">Cerimônia</span>
-                        </div>
-                    </div> -->
                 </div>
                 <div class="tab-content" id="dia5">
                     <div class="agenda-item agenda-locked">
@@ -335,30 +252,6 @@
                             <span class="lock-text">Programação em breve</span>
                         </div>
                     </div>
-                    <!-- <div class="agenda-item">
-                        <div class="agenda-time">09:00 - 10:30</div>
-                        <div class="agenda-details">
-                            <h3>Palestra: Futuro do Trabalho</h3>
-                            <p>Auditório Principal - Palestrante: Dra. Paula Oliveira</p>
-                            <span class="agenda-type">Palestra</span>
-                        </div>
-                    </div>
-                    <div class="agenda-item">
-                        <div class="agenda-time">11:00 - 12:30</div>
-                        <div class="agenda-details">
-                            <h3>Workshop: Design Thinking</h3>
-                            <p>Sala B - Facilitador: Lucas Ferreira</p>
-                            <span class="agenda-type">Workshop</span>
-                        </div>
-                    </div>
-                    <div class="agenda-item">
-                        <div class="agenda-time">14:00 - 15:00</div>
-                        <div class="agenda-details">
-                            <h3>Premiação e Encerramento</h3>
-                            <p>Auditório Principal</p>
-                            <span class="agenda-type">Cerimônia</span>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </div>
