--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="assets/fepro/FeproFavIcon.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
@@ -80,22 +80,32 @@
 
     <section id="about" class="section about-section">
         <div class="container">
-            <div class="about-content">
-                <section class="section-header">
-                    <h2 class="section-title">Sobre o evento</h2>
-                    <p class="section-subtitle">FEPRO - Feira da Promoção de Nova Friburgo</p>
-                </section>
-                <p class="about-description">
-                    A FEPRO 2026 está chegando! A Feira da promoção é um evento tradicional que acontece há 26 anos em
-                    Nova Friburgo, consolidando-se como um grande sucesso de público e vendas. Seu principal objetivo é
-                    oferecer ao consumidor produtos com descontos especiais, tornando-se uma excelente oportunidade de
-                    compras a preços mais baixos que os do mercado tradicional
-                </p>
-                <div class="about-buttons">
-                    <a href="#agenda" class="btn btn-primary">Ver Programação</a>
-                    <a href="#exhibitors" class="btn btn-secondary">Conheça os Expositores</a>
+            <div class="about-layout">
+                <div class="about-video">
+                    <blockquote class="instagram-media"
+                        data-instgrm-permalink="https://www.instagram.com/reel/DHmHDH2y6pa/"
+                        data-instgrm-version="14">
+                    </blockquote>
+                </div>
+                <div class="about-content">
+                    <section class="section-header">
+                        <h2 class="section-title">Sobre o evento</h2>
+                        <p class="section-subtitle">FEPRO - Feira da Promoção de Nova Friburgo</p>
+                    </section>
+                    <p class="about-description">
+                        A FEPRO 2026 está chegando! A Feira da promoção é um evento tradicional que acontece há 26 anos em
+                        Nova Friburgo, consolidando-se como um grande sucesso de público e vendas. Seu principal objetivo é
+                        oferecer ao consumidor produtos com descontos especiais, tornando-se uma excelente oportunidade de
+                        compras a preços mais baixos que os do mercado tradicional. A Feira vai acontecer no Nova Friburgo Country Clube -
+                        Av. Conselheiro Julius Arp, 140.
+                    </p>
+                    <div class="about-buttons">
+                        <a href="#agenda" class="btn btn-primary">Ver Programação</a>
+                        <a href="#exhibitors" class="btn btn-secondary">Conheça os Expositores</a>
+                    </div>
                 </div>
             </div>
+
             <div class="about-stats">
                 <div class="stat-card">
                     <div class="stat-number">100</div>
@@ -156,8 +166,8 @@
                 <h3>Informações Importantes</h3>
                 <ul>
                     <li>Estacionamento de responsabilidade do NFCC (valores sob consulta)</li>
-                    <li>Meia entrada para estudantes, idosos (60+), 
-                        pessoas com deficiência e acompanhantes, jovens de baixa renda (15-29 anos no CadÚnico) 
+                    <li>Meia entrada para estudantes, idosos (60+),
+                        pessoas com deficiência e acompanhantes, jovens de baixa renda (15-29 anos no CadÚnico)
                         mediante comprovação
                     </li>
                     <li>Gratuidade para crianças até 12 anos</li>
@@ -262,41 +272,49 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Expositores</h2>
-                <p class="section-subtitle">Conheça alguns dos nossos expositores que estarão presentes na FEPRO 2026</p>
+                <p class="section-subtitle">Conheça alguns dos nossos expositores que estarão presentes na FEPRO 2026
+                </p>
             </div>
             <div class="exhibitors-grid">
-                <a href="https://www.instagram.com/bazaropcao/" class="exhibitors-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/bazaropcao/" class="exhibitors-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <img src="assets/exhibitors/BazarOpcaoLogo.jpg" alt="Bazar Opção Logo" class="exhibitors-logo">
                     <h3 class="exhibitors-name">Bazar Opção</h3>
                     <p class="exhibitors-desc">Utilidades, decoração, brinquedos e papelaria</p>
                     <div class="exhibitors-category">Casa</div>
                 </a>
-                <a href="https://www.instagram.com/courodaserranf/" class="exhibitors-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/courodaserranf/" class="exhibitors-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <img src="assets/exhibitors/CouroDaSerraLogo.jpg" alt="Couro da Serra Logo" class="exhibitors-logo">
                     <h3 class="exhibitors-name">Couro da Serra</h3>
                     <p class="exhibitors-desc">Autenticidade, textura e estilo em cada modelo</p>
                     <div class="exhibitors-category">Acessórios</div>
                 </a>
-                <a href="https://www.instagram.com/oculoscoyote/" class="exhibitors-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/oculoscoyote/" class="exhibitors-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <img src="assets/exhibitors/CoyoteLogo.jpg" alt="Coyote Logo" class="exhibitors-logo">
                     <h3 class="exhibitors-name">Coyote</h3>
                     <p class="exhibitors-desc">Inovando o conceito de ótica há 40 anos</p>
                     <div class="exhibitors-category">Saúde</div>
                 </a>
-                <a href="https://www.instagram.com/d33d_auto/" class="exhibitors-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/d33d_auto/" class="exhibitors-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <img src="assets/exhibitors/D33dLogo.jpg" alt="D33D Logo" class="exhibitors-logo">
                     <h3 class="exhibitors-name">D33D</h3>
                     <p class="exhibitors-desc">Do básico ao inteligente</p>
                     <div class="exhibitors-category">Tecnologia</div>
                 </a>
-                <a href="https://www.instagram.com/espacodecormoveis/" class="exhibitors-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/espacodecormoveis/" class="exhibitors-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <img src="assets/exhibitors/EspacoDecorLogo.jpg" alt="Espaço Decor Logo" class="exhibitors-logo">
                     <h3 class="exhibitors-name">Espaço Decor</h3>
                     <p class="exhibitors-desc">A sua casa merece o melhor</p>
                     <div class="exhibitors-category">Móveis</div>
                 </a>
-                <a href="https://www.instagram.com/pimentadecheirofitness/" class="exhibitors-card" target="_blank" rel="nonoopener noreferrer">
-                    <img src="assets/exhibitors/PimentaDeCheiroLogo.jpg" alt="Pimenta de Cheiro Logo" class="exhibitors-logo">
+                <a href="https://www.instagram.com/pimentadecheirofitness/" class="exhibitors-card" target="_blank"
+                    rel="nonoopener noreferrer">
+                    <img src="assets/exhibitors/PimentaDeCheiroLogo.jpg" alt="Pimenta de Cheiro Logo"
+                        class="exhibitors-logo">
                     <h3 class="exhibitors-name">Pimenta de Cheiro</h3>
                     <p class="exhibitors-desc">Roupa fitness feminina para todo tipo de mulher</p>
                     <div class="exhibitors-category">Moda</div>
@@ -313,91 +331,106 @@
                 <p class="section-subtitle">Agradecemos aqueles que fazem o evento acontecer</p>
             </div>
             <div class="partners-grid">
-                <a href="https://www.instagram.com/acianf/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/acianf/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/AcianfLogo.png" alt="ACIANF">
                     </div>
                     <h3 class="partners-tier">Apoio Institucional</h3>
                 </a>
-                <a href="https://www.instagram.com/grupoaguasdobrasil/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/grupoaguasdobrasil/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo partners-logo-filter">
                         <img src="assets/partners/AguasDeNovaFriburgoLogo.png" alt="Águas de Nova Friburgo">
                     </div>
                     <h3 class="partners-tier">Parceria</h3>
                 </a>
-                <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/ConventionLogo.png" alt="Convention">
                     </div>
                     <h3 class="partners-tier">Apoio Institucional</h3>
                 </a>
-                <a href="https://www.instagram.com/nfcountryclube/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/nfcountryclube/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/NfccLogo.png" alt="NFCC">
                     </div>
                     <h3 class="partners-tier">Parceria</h3>
                 </a>
-                <a href="https://www.instagram.com/facerj_/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/facerj_/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/FacerjLogo.png" alt="FACERJ">
                     </div>
                     <h3 class="partners-tier">Apoio Institucional</h3>
                 </a>
-                <a href="https://www.instagram.com/faol_oficial/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/faol_oficial/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/FaolLogo.svg" alt="FAOL">
                     </div>
                     <h3 class="partners-tier">Parceria</h3>
                 </a>
-                <a href="https://www.instagram.com/friburgofm/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/friburgofm/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/FriburgoFmLogo.webp" alt="Friburgo FM">
                     </div>
                     <h3 class="partners-tier">Midia Partner</h3>
                 </a>
-                <a href="https://www.instagram.com/frionline/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/frionline/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/FriOnlineLogo.png">
                     </div>
                     <h3 class="partners-tier">Patrocinador</h3>
                 </a>
-                <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/novafriburgodestino/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/InterTvLogo.webp" alt="Convention">
                     </div>
                     <h3 class="partners-tier">Midia Partner</h3>
                 </a>
-                <a href="https://www.instagram.com/novafriburgoemfoco/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/novafriburgoemfoco/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo partners-logo-filter">
                         <img src="assets/partners/NovaFriburgoEmFoco.webp" alt="Nova Friburgo Em Foco">
                     </div>
                     <h3 class="partners-tier">Midia Partner</h3>
                 </a>
-                <a href="https://www.instagram.com/prefeituranovafriburgo/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/prefeituranovafriburgo/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/PrefeituraLogo.jpg" alt="PMNF">
                     </div>
                     <h3 class="partners-tier">Parceria</h3>
                 </a>
-                <a href="https://www.instagram.com/rg.criativa/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/rg.criativa/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/RgCriativaLogo.svg" alt="RG Criativa">
                     </div>
                     <h3 class="partners-tier">Parceria</h3>
                 </a>
-                <a href="https://www.instagram.com/concessionariarota116/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/concessionariarota116/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/Rota116Logo.png" alt="Rota 116">
                     </div>
                     <h3 class="partners-tier">Parceria</h3>
                 </a>
-                <a href="https://www.instagram.com/sebrae/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/sebrae/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
-                    <img src="assets/partners/SebraeLogo.png" alt="Sebrae">
+                        <img src="assets/partners/SebraeLogo.png" alt="Sebrae">
                     </div>
                     <h3 class="partners-tier">Patrocinador</h3>
                 </a>
-                <a href="https://www.instagram.com/unimedserranarj/" class="partners-card" target="_blank" rel="nonoopener noreferrer">
+                <a href="https://www.instagram.com/unimedserranarj/" class="partners-card" target="_blank"
+                    rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/UnimedLogo.png" alt="Unimed">
                     </div>
@@ -485,13 +518,16 @@
                 <div class="footer-section">
                     <h4>Redes Sociais</h4>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/fepronovafriburgo/" target="_blank" aria-label="Instagram" rel="nonoopener noreferrer">
+                        <a href="https://www.instagram.com/fepronovafriburgo/" target="_blank" aria-label="Instagram"
+                            rel="nonoopener noreferrer">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://www.facebook.com/fepronovafriburgo/" target="_blank" aria-label="Facebook" rel="nonoopener noreferrer">
+                        <a href="https://www.facebook.com/fepronovafriburgo/" target="_blank" aria-label="Facebook"
+                            rel="nonoopener noreferrer">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="https://wa.me/5522988292912/" target="_blank" aria-label="WhatsApp" rel="nonoopener noreferrer">
+                        <a href="https://wa.me/5522988292912/" target="_blank" aria-label="WhatsApp"
+                            rel="nonoopener noreferrer">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
@@ -499,12 +535,15 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2026 FEPRO. Todos os direitos reservados à Âmbar Produções LTDA</p>
-                <p>Criado por <a href="https://www.linkedin.com/in/matheustvelloso/" target="_blank" aria-label="LinkedIn" rel="nonoopener noreferrer" class="creator-profile-link"><i>Matheus Velloso</i></a></p>
+                <p>Criado por <a href="https://www.linkedin.com/in/matheustvelloso/" target="_blank"
+                        aria-label="LinkedIn" rel="nonoopener noreferrer" class="creator-profile-link"><i>Matheus
+                            Velloso</i></a></p>
             </div>
         </div>
     </footer>
 
     <script src="script.js"></script>
+    <script async src="//www.instagram.com/embed.js"></script>
 </body>
 
 </html>
