fix: update partner link for Sebrae in index.html

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                     </div>
                     <h3 class="partners-tier">Parceria</h3>
                 </a>
-                <a href="https://www.instagram.com/sebrae/" class="partners-card" target="_blank"
+                <a href="https://sebrae.com.br/sites/PortalSebrae/" class="partners-card" target="_blank"
                     rel="nonoopener noreferrer">
                     <div class="partners-logo">
                         <img src="assets/partners/SebraeLogo.png" alt="Sebrae">
