feat: add tickets section with pricing details and styles for improved event information

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <ul class="nav-menu">
                         <li><a href="#about" class="nav-link active">Sobre o evento</a></li>
                         <li><a href="#schedule" class="nav-link">Horários</a></li>
+                        <li><a href="#tickets" class="nav-link">Ingressos</a></li>
                         <li><a href="#agenda" class="nav-link">Programação</a></li>
                         <li><a href="#exhibitors" class="nav-link">Expositores</a></li>
                         <li><a href="#partners" class="nav-link">Patrocinadores</a></li>
@@ -161,17 +162,89 @@
                 <h3>Informações Importantes</h3>
                 <ul>
                     <li>Estacionamento de responsabilidade do NFCC (valores sob consulta)</li>
-                    <li>Meia entrada para estudantes, idosos (60+),
-                        pessoas com deficiência e acompanhantes, jovens de baixa renda (15-29 anos no CadÚnico)
-                        mediante comprovação
-                    </li>
-                    <li>Gratuidade para crianças até 12 anos</li>
                     <li>Menores somente acompanhados do responsável legal</li>
                     <li>Praça de alimentação disponível no evento</li>
                 </ul>
             </div>
         </div>
     </section>
+
+    <!-- Tickets Section -->
+    <!-- <section id="tickets" class="section tickets-section">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Ingressos</h2>
+                <p class="section-subtitle">Confira os valores e condições especiais</p>
+            </div>
+            <div class="tickets-grid">
+                <div class="ticket-card ticket-featured">
+                    <div class="ticket-badge">Abertura</div>
+                    <div class="ticket-day">Quarta-feira</div>
+                    <div class="ticket-date">08 de Abril</div>
+                    <div class="ticket-price-wrapper">
+                        <div class="ticket-price">GRÁTIS</div>
+                        <div class="ticket-subtitle">Entrada gratuita</div>
+                    </div>
+                    <div class="ticket-info">
+                        <p>Venha aproveitar a abertura da FEPRO 2026 com entrada totalmente gratuita!</p>
+                    </div>
+                </div>
+
+                <div class="ticket-card ticket-special">
+                    <div class="ticket-badge">Friburguense</div>
+                    <div class="ticket-day">Quinta-feira</div>
+                    <div class="ticket-date">09 de Abril</div>
+                    <div class="ticket-price-wrapper">
+                        <div class="ticket-price-group">
+                            <div class="ticket-price-item">
+                                <span class="price-label">Meia*</span>
+                                <span class="price-value">R$ 2</span>
+                            </div>
+                            <div class="ticket-price-item">
+                                <span class="price-label">Inteira</span>
+                                <span class="price-value">R$ 4</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ticket-info">
+                        <p class="ticket-note">* Friburguense paga meia mediante apresentação de comprovante de residência</p>
+                    </div>
+                </div>
+
+                <div class="ticket-card">
+                    <div class="ticket-badge">Demais dias</div>
+                    <div class="ticket-day">Sexta, Sábado e Domingo</div>
+                    <div class="ticket-date">10, 11 e 12 de Abril</div>
+                    <div class="ticket-price-wrapper">
+                        <div class="ticket-price-group">
+                            <div class="ticket-price-item">
+                                <span class="price-label">Meia</span>
+                                <span class="price-value">R$ 2</span>
+                            </div>
+                            <div class="ticket-price-item">
+                                <span class="price-label">Inteira</span>
+                                <span class="price-value">R$ 4</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ticket-info">
+                        <p>Valores normais para o final de semana</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tickets-notes">
+                <h3>Informações sobre meia-entrada</h3>
+                <ul>
+                    <li><i class="fas fa-check-circle"></i> Estudantes (mediante carteirinha ou declaração)</li>
+                    <li><i class="fas fa-check-circle"></i> Idosos com 60 anos ou mais</li>
+                    <li><i class="fas fa-check-circle"></i> Pessoas com deficiência e acompanhante</li>
+                    <li><i class="fas fa-check-circle"></i> Jovens de baixa renda (15-29 anos cadastrados no CadÚnico)</li>
+                    <li><i class="fas fa-check-circle"></i> Crianças até 12 anos têm entrada gratuita</li>
+                </ul>
+            </div>
+        </div>
+    </section> -->
 
     <!-- Agenda Section -->
     <section id="agenda" class="section agenda-section">
@@ -497,6 +570,7 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#schedule">Horários</a></li>
+                        <li><a href="#tickets">Ingressos</a></li>
                         <li><a href="#agenda">Programação</a></li>
                         <li><a href="#exhibitors">Expositores</a></li>
                         <li><a href="#partners">Patrocinadores</a></li>
