style: simplify exhibitors section by removing unnecessary class for improved layout clarity

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     </section>
 
     <!-- Exhibitors Section with Carousel -->
-    <section id="exhibitors" class="section exhibitors-section">
+    <section id="exhibitors" class="section">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Expositores</h2>
