style: update footer creator attribution for improved visual emphasis

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2026 FEPRO. Todos os direitos reservados à Âmbar Produções LTDA</p>
-                <p>Criado por <a href="https://www.linkedin.com/in/matheustvelloso/" target="_blank" aria-label="LinkedIn" rel="noopener noreferrer" class="creator-profile-link"><i>Matheus Velloso</i></a></p>
+                <p>Criado por <i style="color: #00a8eb;">Matheus Velloso</i></p>
             </div>
         </div>
     </footer>
