style: update offers stat number from 1000 to 50k for improved clarity

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <div class="stat-label">Estandes</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">1000</div>
+                    <div class="stat-number">50k</div>
                     <div class="stat-label">Ofertas</div>
                 </div>
                 <div class="stat-card">
