style: update stat numbers format from 'k' to '.' for improved readability and enhance counter animation logic

--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
                     <div class="stat-label">Estandes</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">50k</div>
+                    <div class="stat-number">50.000</div>
                     <div class="stat-label">Ofertas</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">40k</div>
+                    <div class="stat-number">40.000</div>
                     <div class="stat-label">Visitantes</div>
                 </div>
             </div>
