style: update Instagram permalink in about section for accurate content display

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="about-layout">
                 <div class="about-video">
                     <blockquote class="instagram-media"
-                        data-instgrm-permalink="https://www.instagram.com/reel/DHmHDH2y6pa/" data-instgrm-version="14">
+                        data-instgrm-permalink="https://www.instagram.com/p/DTlftaij1cF/" data-instgrm-version="14">
                     </blockquote>
                 </div>
                 <div class="about-content">
