style: replace Sallada Mista logo PNG with JPEG for improved image quality and remove outdated asset

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                         </a>
                 
                         <a href="https://www.instagram.com/salladamista/" class="exhibitors-card" target="_blank" rel="noopener noreferrer">
-                            <img src="assets/exhibitors/SalladaMistaLogo.png" alt="Salada Mista Logo" class="exhibitors-logo">
+                            <img src="assets/exhibitors/SalladaMistaLogo.jpeg" alt="Salada Mista Logo" class="exhibitors-logo">
                             <h3 class="exhibitors-name">Sallada Mista</h3>
                             <p class="exhibitors-desc">Moda Feminina Fabricação própria </p>
                             <div class="exhibitors-category">Moda</div>
