style: add 'Lotes' section with image and navigation links for enhanced event information

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         <li><a href="#map" class="nav-link">Mapa do evento</a></li>
                         <li><a href="#sebrae" class="nav-link">Sebrae</a></li>
                         <li><a href="#pictures" class="nav-link">Fotos</a></li>
+                        <li><a href="#lotes" class="nav-link">Lotes</a></li>
                     </ul>
 
                     <ul class="nav-menu nav-desktop">
@@ -63,6 +64,7 @@
                         <li><a href="#partners" class="nav-link">Patrocinadores</a></li>
                         <li><a href="#map" class="nav-link">Mapa do evento</a></li>
                         <li><a href="#sebrae" class="nav-link">Sebrae</a></li>
+                        <li><a href="#lotes" class="nav-link">Lotes</a></li>
                     </ul>
                 </div>
             </div>
@@ -967,6 +969,20 @@
         </div>
     </section>
 
+    <section id="lotes" class="section lotes-section">
+        <div class="container">
+            <div class="lotes-layout">
+                <div class="section-header">
+                    <h2 class="section-title">Lotes</h2>
+                    <p class="section-subtitle">Tabela de valores</p>
+                </div>
+                <div class="lotes-container">
+                    <img src="assets/Lotes.jpeg" alt="Lotes">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
@@ -987,6 +1003,7 @@
                         <li><a href="#map">Mapa</a></li>
                         <li><a href="#sebrae">Sebrae</a></li>
                         <li><a href="#pictures">Fotos</a></li>
+                        <li><a href="#lotes">Lotes</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
